fix: show note scrollbar only when it is active

--- a/packages/react-ui/src/styles.css
+++ b/packages/react-ui/src/styles.css
@@ -519,7 +519,7 @@
 
 }
 
-.note-node:hover  {
+.note-node:focus-within:hover  {
   ::-webkit-scrollbar-thumb {
     background: hsla(0, 1%, 66%, 0.328);
     border-radius: 100px;
